added the different methods

--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'Forest_Service'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
+mainClassName = 'App'
 
 repositories {
     mavenCentral()
@@ -13,4 +15,10 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile "com.sparkjava:spark-core:2.6.0"
+    compile "com.sparkjava:spark-template-handlebars:2.5.5"
+    compile 'org.slf4j:slf4j-simple:1.7.21'
+    compile 'org.sql2o:sql2o:1.5.4'
+
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
 }
